# ardor

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  ardor-pedal  audio-probe-pi  enclosure.openscad  lv_conf.h  pedal-poc-pi  test.html
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  firmware.yml  release.yml
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md
apps/audio-probe/: main.c
apps/manager/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
apps/manager/src/: App.tsx  styles.css  vite-env.d.ts
apps/manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/manager/src-tauri/capabilities/: default.json
apps/manager/src-tauri/icons/: icon.icns
apps/manager/src-tauri/src/: main.rs
apps/manager/src/api/: client.test.ts  client.ts  errors.ts  types.ts
apps/manager/src/app/: AppShell.tsx
apps/manager/src/assets/: AssetLibrary.test.tsx  AssetLibrary.tsx
apps/manager/src/components/: ParameterSlider.tsx  ui.tsx
apps/manager/src/connection/: ConnectionDialog.test.tsx  ConnectionDialog.tsx  deviceSession.test.tsx  deviceSession.tsx
apps/manager/src/effects/: catalog.test.ts  catalog.ts  catalog.v1.json  daisyValues.ts  types.ts
apps/manager/src/presets/: presetDraft.test.ts  presetDraft.ts
apps/manager/src/test/: render.tsx  smoke.test.tsx
apps/manager/src/tone3000/: Tone3000Dialog.tsx  client.test.ts  client.ts  native.ts
apps/pedal-poc/: main.cpp
apps/pedal-ui-sim/: main.cpp
buildroot/: buildroot-version.env
docs/: audio-engine-remediation-plan.md  code-review-2026-07-15.md  code-review-remediation-plan-2026-07-15.md  daisyfx-hosted-implementation-plan.md  hardware-assembly.md  hardware-validation.md  nam-calibration-and-pi-validation-runbook.md  pi-realtime-validation-runbook.md  preset-runtime-testing.md
docs/api/: ardor-managerd.openapi.yaml
docs/superpowers/plans/: 2026-07-07-pedal-poc.md  2026-07-07-preset-ui-architecture.md  2026-07-08-audio-engine-integration.md  2026-07-08-daisy-effects-integration.md  2026-07-08-effect-parameters-v1.md  2026-07-08-hardware-controls-integration.md  2026-07-08-lvgl-ui-shell.md  2026-07-08-master-implementation-roadmap.md  2026-07-08-pi-buildroot-target.md  2026-07-08-preset-driven-cli.md  2026-07-08-realtime-robustness.md  2026-07-08-runtime-preset-switching.md  2026-07-08-ui-save-load-wiring.md  2026-07-09-ir-convolver-performance.md  2026-07-09-ui-audio-integration.md  2026-07-10-manager-daemon-tauri.md  2026-07-12-lvgl-block-drawer-refinement.md  2026-07-12-lvgl-flat-knob-redesign.md  2026-07-13-chain-card-typography.md  2026-07-13-fixed-chain-and-clean-knobs.md  2026-07-14-complete-multi-fx-and-compressor.md  2026-07-14-five-band-parametric-eq.md  2026-07-15-buildroot-lts-upgrade.md  2026-07-15-manager-pedalboard-redesign.md
docs/superpowers/specs/: 2026-07-07-pedal-poc-design.md  2026-07-07-preset-ui-architecture-design.md  2026-07-10-manager-daemon-tauri-design.md  2026-07-12-lvgl-flat-knob-redesign-design.md  2026-07-13-chain-card-typography-design.md  2026-07-13-fixed-chain-viewport-design.md  2026-07-14-complete-multi-fx-and-compressor-design.md  2026-07-14-five-band-parametric-eq-design.md  2026-07-15-buildroot-lts-upgrade-design.md
mockups/preset-ui/: index.html
presets/bank-000/: preset-0.json  preset-1.json  preset-3.json
presets/bank-002/: preset-0.json
scripts/: build-image-in-container.sh  build-image.sh  build-sim.sh  deploy-lan.sh
services/managerd/: go.mod
services/managerd/cmd/ardor-managerd/: main.go
services/managerd/internal/assets/: assets.go  assets_test.go
services/managerd/internal/config/: config.go
services/managerd/internal/presets/: presets.go  presets_test.go
services/managerd/internal/runtimecontrol/: runtimecontrol.go  runtimecontrol_test.go
services/managerd/internal/server/: server.go  server_test.go
src/audio/: EngineLoader.cpp  EngineLoader.h  MiniaudioBackend.cpp  MiniaudioBackend.h  PresetActivation.cpp  PresetActivation.h  WavIo.cpp  WavIo.h
src/control/: ControlEvents.cpp  ControlEvents.h  LinuxInput.cpp  LinuxInput.h
src/daisyfx/: DaisyFxCatalog.cpp  DaisyFxCatalog.h  DaisyFxProcessor.cpp  DaisyFxProcessor.h
src/daisyfx/hosted/: ORIGIN.md
src/daisyfx/hosted/dsp/: dc_blocker.h  delay_line_sdram.cpp  delay_line_sdram.h  envelope_follower.cpp  envelope_follower.h  fast_math.h  fdn.cpp  fdn.h  halfband_resampler.h  lfo.cpp  lfo.h  pitch_shifter.h  (+2 more)
src/dsp/: AudioBuffer.h  ClipDiagnostics.h  DenormalGuard.h  IrConvolver.cpp  IrConvolver.h  NamProcessor.cpp  NamProcessor.h  PedalEngine.cpp  PedalEngine.h  RuntimeChain.cpp  RuntimeChain.h  Tuner.cpp  Tuner.h
src/dynamics/: CompressorProcessor.cpp  CompressorProcessor.h
src/equalizer/: EqParameters.cpp  EqParameters.h  ParametricEqMath.cpp  ParametricEqMath.h  ParametricEqProcessor.cpp  ParametricEqProcessor.h
src/preset/: ChainPlan.cpp  ChainPlan.h  Preset.cpp  Preset.h  PresetStore.cpp  PresetStore.h  RuntimeCommands.cpp  RuntimeCommands.h  RuntimeState.cpp  RuntimeState.h
src/ui/: EqEditorModel.cpp  EqEditorModel.h  LvglUi.cpp  LvglUi.h  ParameterControls.cpp  ParameterControls.h  UiModel.cpp  UiModel.h
src/ui/fonts/: OpenSansRegular.c  OpenSansRegular.h  OpenSansSemibold.c  OpenSansSemibold.h
tests/: compressor_smoke.cpp  control_smoke.cpp  daisy_fx_automation.cpp  daisy_fx_catalog_smoke.cpp  daisy_fx_response.cpp  daisy_fx_smoke.cpp  denormal_bench.cpp  dsp_bench.cpp  engine_contract_smoke.cpp  eq_editor_model_smoke.cpp  hosted_dsp_unit.cpp  lvgl_ui_smoke.cpp  manager_effect_catalog_smoke.cpp  nam_processor_smoke.cpp  offline_smoke.cpp  parametric_eq_smoke.cpp  preset_activation_smoke.cpp  preset_cli_smoke.cpp  preset_reload_stress.cpp  preset_smoke.cpp  runtime_chain_smoke.cpp  runtime_commands_smoke.cpp  tuner_smoke.cpp  ui_model_smoke.cpp
(+86 files in other folders)
